--- a/works-fine-art.html
+++ b/works-fine-art.html
@@ -247,7 +247,10 @@
                 <!-- Portfolio Item 1 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="oil portrait">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-1.jpg" alt="유화 반려동물 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_1_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_1_image_2.jpg" alt="유화 반려동물 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-amber-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Oil Painting
                         </div>
@@ -267,7 +270,10 @@
                 <!-- Portfolio Item 2 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="acrylic portrait">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-2.jpg" alt="아크릴화 반려동물 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_2_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_2_image_2.jpg" alt="아크릴화 반려동물 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-blue-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Acrylic Painting
                         </div>
@@ -287,7 +293,10 @@
                 <!-- Portfolio Item 3 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="oil">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-3.jpg" alt="유화 정물화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_3_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_3_image_2.jpg" alt="유화 정물화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-amber-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Oil Painting
                         </div>
@@ -307,7 +316,10 @@
                 <!-- Portfolio Item 4 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="acrylic">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-4.jpg" alt="아크릴화 추상 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_4_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_4_image_2.jpg" alt="아크릴화 추상 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-blue-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Acrylic Painting
                         </div>
@@ -327,7 +339,10 @@
                 <!-- Portfolio Item 5 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="oil portrait">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-5.jpg" alt="유화 고양이 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_5_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_5_image_2.jpg" alt="유화 고양이 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-amber-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Oil Painting
                         </div>
@@ -347,7 +362,10 @@
                 <!-- Portfolio Item 6 -->
                 <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="acrylic portrait">
                     <div class="relative overflow-hidden">
-                        <img src="images/portfolio-before-6.jpg" alt="아크릴화 토끼 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_6_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_6_image_2.jpg" alt="아크릴화 토끼 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
                         <div class="absolute top-4 left-4 bg-blue-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
                             Acrylic Painting
                         </div>
@@ -357,6 +375,29 @@
                         <p class="text-gray-600 mb-4">25cm x 35cm, Canvas on Acrylic</p>
                         <div class="flex items-center justify-between">
                             <span class="text-green-600 font-semibold">₩250,000</span>
+                            <button class="text-gray-500 hover:text-green-600 transition">
+                                <i class="fas fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 7 -->
+                <div class="portfolio-item bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2" data-category="oil portrait">
+                    <div class="relative overflow-hidden">
+                        <div class="grid grid-cols-2 gap-2">
+                            <img src="images/extracted_images/page_7_image_1.jpg" alt="원본 사진" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                            <img src="images/extracted_images/page_7_image_2.jpg" alt="유화 반려동물 초상화 작품" class="w-full h-80 object-cover transition-transform duration-300 hover:scale-110">
+                        </div>
+                        <div class="absolute top-4 left-4 bg-amber-600 text-white px-3 py-1 rounded-full text-sm font-semibold">
+                            Oil Painting
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">반려동물 초상화</h3>
+                        <p class="text-gray-600 mb-4">35cm x 45cm, Canvas on Oil</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-green-600 font-semibold">₩320,000</span>
                             <button class="text-gray-500 hover:text-green-600 transition">
                                 <i class="fas fa-heart"></i>
                             </button>
