--- a/works-calligraphy.html
+++ b/works-calligraphy.html
@@ -58,6 +58,15 @@
                                         <div class="text-sm text-gray-500">전통 & 현대</div>
                                     </div>
                                 </a>
+                                <a href="louis-vuitton.html" class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-green-50 transition group">
+                                    <div class="w-10 h-10 bg-yellow-100 rounded-xl flex items-center justify-center group-hover:bg-yellow-200 transition">
+                                        <i class="fas fa-crown text-yellow-600"></i>
+                                    </div>
+                                    <div>
+                                        <div class="font-semibold text-gray-800">Louis Vuitton</div>
+                                        <div class="text-sm text-gray-500">VIP 이벤트</div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -97,6 +106,10 @@
                             <a href="#" class="flex items-center space-x-2 text-green-600 font-semibold py-1">
                                 <i class="fas fa-pen-nib text-blue-500 text-sm"></i>
                                 <span>Calligraphy</span>
+                            </a>
+                            <a href="louis-vuitton.html" class="flex items-center space-x-2 text-gray-500 hover:text-green-600 transition py-1">
+                                <i class="fas fa-crown text-yellow-500 text-sm"></i>
+                                <span>Louis Vuitton</span>
                             </a>
                         </div>
                     </div>
