--- a/about.html
+++ b/about.html
@@ -65,19 +65,14 @@
                                         <div class="text-sm text-gray-500">전통 & 현대</div>
                                     </div>
                                 </a>
-                                <a href="louis-vuitton.html" class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-green-50 transition group">
-                                    <div class="w-10 h-10 bg-yellow-100 rounded-xl flex items-center justify-center group-hover:bg-yellow-200 transition">
-                                        <i class="fas fa-crown text-yellow-600"></i>
-                                    </div>
-                                    <div>
-                                        <div class="font-semibold text-gray-800">Louis Vuitton</div>
-                                        <div class="text-sm text-gray-500">VIP 이벤트</div>
-                                    </div>
-                                </a>
                             </div>
                         </div>
                     </div>
                     
+                    <a href="louis-vuitton.html" class="text-gray-700 hover:text-green-600 transition flex items-center space-x-1">
+                        <i class="fas fa-crown text-yellow-600 mr-1"></i>
+                        <span>Louis Vuitton</span>
+                    </a>
                     <a href="services.html" class="text-gray-700 hover:text-green-600 transition">Services</a>
                     <a href="exhibition.html" class="text-gray-700 hover:text-green-600 transition">Exhibition</a>
                     <a href="contact.html" class="bg-green-600 text-white px-6 py-2 rounded-full hover:bg-green-700 transition">Contact</a>
