--- a/louis-vuitton.html
+++ b/louis-vuitton.html
@@ -547,11 +547,11 @@
                         <!-- Before & After Comparison -->
                         <div class="grid grid-cols-2 gap-2 mb-4">
                             <div class="text-center">
-                                <img src="louis_vuitton_images/louis_vuitton_page_1_image_1.jpg" alt="원본 사진" class="w-full h-32 object-cover rounded-xl mb-1">
+                                <img src="louis_vuitton_images/louis_vuitton_page_1_image_1.jpg" alt="원본 사진" class="w-full h-32 dog-portrait-img rounded-xl mb-1">
                                 <p class="text-xs text-gray-500">원본</p>
                             </div>
                             <div class="text-center">
-                                <img src="louis_vuitton_images/louis_vuitton_page_1_image_1.jpg" alt="완성 작품" class="w-full h-32 object-cover rounded-xl mb-1">
+                                <img src="louis_vuitton_images/louis_vuitton_page_1_image_1.jpg" alt="완성 작품" class="w-full h-32 dog-portrait-img rounded-xl mb-1">
                                 <p class="text-xs text-gray-500">작품</p>
                             </div>
                         </div>
